--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "js-tokens": "^4.0.0",
     "loose-envify": "^1.4.0",
