--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,9 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "redux-persist": "^6.0.0"
-    
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react-swc": "^3.5.0",
