--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon api/index.js",
-    "start": "node api/index.js"
+    "start": "node api/index.js",
+    "build":"npm i && npm i --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
